Updated ingest and schema modules in football_data package

--- a/football_data/config/data-config.json
+++ b/football_data/config/data-config.json
@@ -133,7 +133,32 @@
                 "http://www.football-data.co.uk/mmz4281/9394/E0.csv",
                 "http://www.football-data.co.uk/mmz4281/9394/E1.csv",
                 "http://www.football-data.co.uk/mmz4281/9394/E2.csv",
-                "http://www.football-data.co.uk/mmz4281/9394/E3.csv"]
+                "http://www.football-data.co.uk/mmz4281/9394/E3.csv"],
+                "data_dict": {
+                "Div":{"name":"div","type":"str"},
+                "Date":{"name":"date","type":"date"},
+                "Time":{"name":"time","type":"str"},
+                "HomeTeam":{"name":"home_team","type":"str"},
+                "AwayTeam":{"name":"away_team","type":"str"},
+                "FTHG":{"name":"FTHG","type":"int"},
+                "FTAG":{"name":"FTAG","type":"int"},
+                "FTR":{"name":"FTR","type":"str"},
+                "HTHG":{"name":"HTHG","type":"int"},
+                "HTAG":{"name":"HTAG","type":"int"},
+                "HTR":{"name":"HTR","type":"str"},
+                "Referee":{"name":"referee","type":"str"},
+                "HS":{"name":"HS","type":"int"},
+                "AS":{"name":"AS","type":"int"},
+                "HST":{"name":"HST","type":"int"},
+                "AST":{"name":"AST","type":"int"},
+                "HF":{"name":"HF","type":"int"},
+                "AF":{"name":"AF","type":"int"},
+                "HC":{"name":"HC","type":"int"},
+                "AC":{"name":"AC","type":"int"},
+                "HY":{"name":"HY","type":"int"},
+                "AY":{"name":"AY","type":"int"},
+                "HR":{"name":"HR","type":"int"},
+                "AR":{"name":"AR","type":"int"}}
             },
             "football_data_uk_current": {
                 "description":"Current season EPL match statistics",
@@ -144,7 +169,32 @@
                 ["http://www.football-data.co.uk/mmz4281/2021/E0.csv",
                 "http://www.football-data.co.uk/mmz4281/2021/E1.csv",
                 "http://www.football-data.co.uk/mmz4281/2021/E2.csv",
-                "http://www.football-data.co.uk/mmz4281/2021/E3.csv"]
+                "http://www.football-data.co.uk/mmz4281/2021/E3.csv"],
+                "data_dict": {
+                "Div":{"name":"div","type":"str"},
+                "Date":{"name":"date","type":"date"},
+                "Time":{"name":"time","type":"str"},
+                "HomeTeam":{"name":"home_team","type":"str"},
+                "AwayTeam":{"name":"away_team","type":"str"},
+                "FTHG":{"name":"FTHG","type":"int"},
+                "FTAG":{"name":"FTAG","type":"int"},
+                "FTR":{"name":"FTR","type":"str"},
+                "HTHG":{"name":"HTHG","type":"int"},
+                "HTAG":{"name":"HTAG","type":"int"},
+                "HTR":{"name":"HTR","type":"str"},
+                "Referee":{"name":"referee","type":"str"},
+                "HS":{"name":"HS","type":"int"},
+                "AS":{"name":"AS","type":"int"},
+                "HST":{"name":"HST","type":"int"},
+                "AST":{"name":"AST","type":"int"},
+                "HF":{"name":"HF","type":"int"},
+                "AF":{"name":"AF","type":"int"},
+                "HC":{"name":"HC","type":"int"},
+                "AC":{"name":"AC","type":"int"},
+                "HY":{"name":"HY","type":"int"},
+                "AY":{"name":"AY","type":"int"},
+                "HR":{"name":"HR","type":"int"},
+                "AR":{"name":"AR","type":"int"}}
             }
         }
     }
